--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,10 @@ font-size: 80%;
 margin: 0px;
 color: #0f0f0f;
 }
+
+.tab-content{
+   border-left: 1px solid #ddd;
+   border-right: 1px solid #ddd;
+   border-bottom: 1px solid #ddd;
+   padding: 10px;
+}
