more Bootstrap Jquery

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ color: #0f0f0f;
    min-height: 300px;
 }
 
-#carouselButtons{
+#carouselButton{
    right: 0px;
    position: absolute;
    bottom: 0px;
