--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,17 @@ body {
   left: 0;
   min-height: 300px;
 }
+.modal-header{
+  background-color: #512DA8;
+  color: floralwhite;
+}
+
+.close{
+  color: floralwhite;
+}
+.modal-body{
+  background-color: #d9cfeb;
+}
 #carouselButton {
   right: 0px;
   position: absolute;
